# Climate_Test

./: README.md  pyproject.toml  requirements.txt
chrpa_test/: __init__.py
chrpa_test/main/: __init.py__
chrpa_test/tests/: test_chrpa_test.py
docs/: chrpa_test.main.rst  conf.py  modules.rst
docs/_build/doctrees/: chrpa_test.doctree  chrpa_test.main.doctree  chrpa_test.tests.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  chrpa_test.html  chrpa_test.main.html  chrpa_test.tests.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: chrpa_test.rst.txt  chrpa_test.tests.rst.txt  index.rst.txt
docs/source/: conf.py
main/: main.py
