[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Climate_Test"
version = "0.0.1"
authors = [
  { name="HM & GP", email="hmendo@sandia.gov" },
]
description = "A github test"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]